feat: implement complete Project CRUD system
- Add ProjectController with 7 endpoints (create, update, delete, getById, getBySlug, search, batch)
- Implement ProjectOutput with full orchestration (save, update, delete, findById, findBySlug, search, findAllById)
- Create 6 use cases (Create, Update, Delete, GetById, GetBySlug, Search)
- Add ProjectInputMapper and ProjectMapper (output) for DTO/entity mapping
- Extend ProjectEntity with bannerUrl, githubUrl, websiteUrl, viewCount, reaction counts
- Add ProjectStatus enum (DRAFT/PUBLISHED) with @Enumerated
- Implement native search with COALESCE language fallback and full-text search
- Add author-ownership checks for update/delete operations
- Fix PostOutput bug (incomplete map operation)
- Add translation filtering (requested → ENGLISH → first available)
- Change PostResponse.projects to projectIds (lazy loading)
- Add batch endpoint POST /v1/project/batch for efficient project loading
- Add @BatchSize(50) to prevent N+1 queries
- Fix PostgreSQL MIN(uuid) error with ORDER BY language LIMIT 1
- Add V2 migration for new project columns
- Create comprehensive test suite (111 tests total, 69 new Project tests)
- All tests pass, BUILD SUCCESS